--- a/Task1_Named_Entity_Recognition/NER_TRAINING.ipynb
+++ b/Task1_Named_Entity_Recognition/NER_TRAINING.ipynb
@@ -629,8 +629,8 @@
         "      shift = 0\n",
         "    else:\n",
         "      shift += 1\n",
-        "      new_sentences[-1][37*shift:] = sentences[i].copy()\n",
-        "      new_labels[-1][37*shift:] = labels[i].copy()\n",
+        "      new_sentences[-1][offset*shift:] = sentences[i].copy()\n",
+        "      new_labels[-1][offset*shift:] = labels[i].copy()\n",
         "\n",
         "  sentences = new_sentences\n",
         "  labels = new_labels\n",
@@ -693,17 +693,6 @@
       "source": [
         "#####Helper Function for Model Evaluation"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "evaluate_model(PATH,tag_values,tokenize_lower = False,assert_data_validity = True)"
-      ],
-      "metadata": {
-        "id": "uw4E7Jd5PJiG"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1892,7 +1881,7 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "name": "notebookf9ad3dde15 (3).ipynb",
+      "name": " NER_TRAINING.ipynb",
       "provenance": []
     },
     "kernelspec": {
